# lumatrix

./: .gitignore  Cargo.toml  LICENSE  README.md  layout.txt
lmx/: diamond.lmx  pacman.lmx
lua/: clock.lua  firework.lua  hourglass.lua  play.lua  pulse.lua  rain.lua  stars.lua
src/: client.rs  debug.rs  device.rs  frame.rs  lua_api.rs  main.rs  module.rs
src/daemon/: ipc.rs  mod.rs  render.rs
