[package]
name = "lumatrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumatrix"
path = "src/main.rs"

[dependencies]
serialport = { version = "4", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
